src/assets/styles/global.module.css
:root {
  --black: #121212;
  --grey: #333;
  --light-grey: #999;
  --rule: #e2e2e2;
  --serif: Georgia, "Times New Roman", Times, serif;
  --sans: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

:global(html) {
  overflow-y: scroll;
}

:global(main) {
  position: relative;
  display: grid;
  grid-template-rows: auto 1fr auto;
  min-height: 100vh;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 55rem;

  > :nth-child(n) {
    min-width: 100%;
  }

  > :nth-child(2) {
    padding-top: 2rem;
  }

  > :last-child {
    margin-top: 3rem;
  }
}

:global(.closed) {
  > :nth-child(n+3) {
    display: none;

    @media (min-width: 600px) {
      display: block;
    }
  }
}

:global(h1) {
  font-family: var(--serif);
  font-weight: 700;
  font-size: 1.75rem;
  line-height: 2rem;
  color: var(--black);
}

:global(h2) {
  font-family: var(--serif);
  font-weight: 700;
  font-size: 1.0625rem;
  line-height: 1.375rem;
  color: var(--black);
}

:global(h3) {
  font-family: var(--sans);
  font-weight: 600;
  font-size: 0.75rem;
  letter-spacing: .05em;
  color: var(--grey);
}

:global(h4) {
  font-family: var(--serif);
  font-weight: 400;
  font-size: 0.9375rem;
  line-height: 1.375rem;
  color: var(--grey);
}

:global(p) {
  font-family: var(--serif);
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75rem;
  color: var(--grey);

  > img {
    max-width: 100%;
  }
}

:global(button) {
  background-color: white;
  border: 1px solid var(--rule);
  border-radius: 2px;
}

:global(.ui-button) {
  background-color: #fff;
  border: 0;
  border-radius: 2px;
  box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
  margin: 10px;
  padding: 0 0.5em;
  font: 400 18px Roboto, Arial, sans-serif;
  overflow: hidden;
  height: 40px;
  cursor: pointer;

  &:hover {
    background: rgb(235, 235, 235);
  }
}

